// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders without crashing 1`] = `
<div
  className="Diagram"
  onMouseMove={[Function]}
>
  <div
    className="Diagram-content"
  />
  <FloatingActionButton
    className="Diagram-add"
    disabled={false}
    mini={false}
    onClick={[Function]}
    secondary={true}
    zDepth={4}
  >
    <ContentAdd />
  </FloatingActionButton>
</div>
`;

exports[`with blocks renders a link if linking 1`] = `
<div
  className="Diagram"
  onMouseMove={[Function]}
>
  <div
    className="Diagram-content"
  >
    <BlockDetail
      height={0}
      id="0"
      key="0"
      name="Block"
      onLinkStart={[Function]}
      onNameChange={[Function]}
      onSizeChange={[Function]}
      width={0}
      x={0}
      y={0}
    />
    <Link
      fromX={1}
      fromY={2}
      toX={10}
      toY={20}
    />
  </div>
  <FloatingActionButton
    className="Diagram-add"
    disabled={false}
    mini={false}
    onClick={[Function]}
    secondary={true}
    zDepth={4}
  >
    <ContentAdd />
  </FloatingActionButton>
</div>
`;

exports[`with blocks renders the blocks 1`] = `
<div
  className="Diagram"
  onMouseMove={[Function]}
>
  <div
    className="Diagram-content"
  >
    <BlockDetail
      height={0}
      id="0"
      key="0"
      name="Block 1"
      onLinkStart={[Function]}
      onNameChange={[Function]}
      onSizeChange={[Function]}
      width={0}
      x={0}
      y={0}
    />
    <BlockDetail
      height={0}
      id="1"
      key="1"
      name="Block 2"
      onLinkStart={[Function]}
      onNameChange={[Function]}
      onSizeChange={[Function]}
      width={0}
      x={0}
      y={0}
    />
  </div>
  <FloatingActionButton
    className="Diagram-add"
    disabled={false}
    mini={false}
    onClick={[Function]}
    secondary={true}
    zDepth={4}
  >
    <ContentAdd />
  </FloatingActionButton>
</div>
`;
